Updated fix on overflow issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,7 @@ html {
 	font-size: 62.5%;
 	background: $white;
 	color: $black;
+	overflow-x: hidden;
 }
 
 body {
